[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]

solana-client = "1.14.16"
solana-sdk = "1.14.16"
tokio = { version = "1", features = ["full"] }
solana-account-decoder = "1.14.16"
solana-transaction-status = "1.14.16"
bs58 = "0.4"
spl-token = "3.5.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[[bin]]
name = "mints"
path = "src/main.rs"

[[bin]]
name = "trade"
path = "src/trade.rs"